@@ -2,6 +2,7 @@
 v3.0.7-git
 ----------
 
+[jan] Fix setting custom alarm methods (Bug #9543).
 [jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
 
 
